--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <img src="./imj/img(0).png" alt="programming" width="370">
                 </li>
                 <li>
-                    <img src="./imj/img(1).png" alt="mobile applications" width="370">
+                    <img src="./imj/img(1).png" alt="mobile_applications" width="370">
                 </li>
                 <li>
                     <img src="./imj/img(2).png" alt="design" width="370">
@@ -82,22 +82,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./imj/img(3).jpg" alt="Ігор Дем'яненко" width="270">
+                    <img src="./imj/img(3).jpg" alt="product_designer" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imj/img(4).jpg" alt="Ольга Рєпіна" width="270">
+                    <img src="./imj/img(4).jpg" alt="frontend_developer" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imj/img(5).jpg" alt="Микола Тарасов" width="270">
+                    <img src="./imj/img(5).jpg" alt="marketing" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./imj/img(6).jpg" alt="Михайло Єрмаков" width="270">
+                    <img src="./imj/img(6).jpg" alt="ui_designer" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
