--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./imj/img(0).png" alt="programming" width="370">
+                    <img src="./imj/img0.png" alt="programming" width="370">
                 </li>
                 <li>
-                    <img src="./imj/img(1).png" alt="mobile_applications" width="370">
+                    <img src="./imj/img1.png" alt="mobile_applications" width="370">
                 </li>
                 <li>
-                    <img src="./imj/img(2).png" alt="design" width="370">
+                    <img src="./imj/img2.png" alt="design" width="370">
                 </li>
             </ul>
         </section>
@@ -82,22 +82,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./imj/img(3).jpg" alt="product_designer" width="270">
+                    <img src="./imj/img3.jpg" alt="product_designer" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imj/img(4).jpg" alt="frontend_developer" width="270">
+                    <img src="./imj/img4.jpg" alt="frontend_developer" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imj/img(5).jpg" alt="marketing" width="270">
+                    <img src="./imj/img5.jpg" alt="marketing" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./imj/img(6).jpg" alt="ui_designer" width="270">
+                    <img src="./imj/img6.jpg" alt="ui_designer" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
