--- a/index.html
+++ b/index.html
@@ -6,42 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documen</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
-    <header>
+    <header class="page-header">
         <nav>
 
             <!--top_line-->
-            <a href="/">WebStudio</a>
+            <a class="logo" href="/">Web<span="logo-part">Studio</span></a>
 
             <!--information_menu-->
-            <ul>
-                <li><a href="#studi">Студія</a></li>
-                <li><a href="#portfolio">Портфоліо</a></li>
-                <li><a href="#contacts">Контакти</a></li>
+            <ul class="menu-list">
+                <li><a class="link" href="#studi">Студія</a></li>
+                <li><a class="link" href="#portfolio">Портфоліо</a></li>
+                <li><a class="link" href="#contacts">Контакти</a></li>
             </ul>
         </nav>
 
         <!--contact-->
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">38 096 111 11 11</a></li>
+        <ul class="contact-list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
         <!--cap-->
-        <section>
+        <section class="cap">
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
 
         <!--features-->
-        <section>
+        <section class="features">
             <h2>Features</h2>
-            <ul>
+            <ul class="features-list">
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
