--- a/index.html
+++ b/index.html
@@ -35,37 +35,37 @@
     <main>
         <!--cap-->
         <section class="cap">
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button-order" type="button">Замовити послугу</button>
         </section>
 
         <!--features-->
-        <section class="features">
-            <h2>Features</h2>
+        <section class="section">
+            <h2 class="section-title">Features</h2>
             <ul class="features-list">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="title-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="title-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="title">ПЛАНУВАННЯ</h3>
+                    <p class="title-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="title-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
 
         <!--what_we_do-->
-        <section>
-            <h2>Чим ми займаємося</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Чим ми займаємося</h2>
+            <ul class="work-list">
                 <li>
                     <img src="./imj/img0.png" alt="programming" width="370">
                 </li>
@@ -79,42 +79,42 @@
         </section>
 
         <!--our_company-->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="company-list">
                 <li>
                     <img src="./imj/img3.jpg" alt="product_designer" width="270">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title">Ігор Дем'яненко</h3>
+                    <p class="title-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./imj/img4.jpg" alt="frontend_developer" width="270">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title">Ольга Рєпіна</h3>
+                    <p class="title-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./imj/img5.jpg" alt="marketing" width="270">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="title">Микола Тарасов</h3>
+                    <p class="title-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./imj/img6.jpg" alt="ui_designer" width="270">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title">Михайло Єрмаков</h3>
+                    <p class="title-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <!--dasement-->
-    <footer>
-        <a href="/">WebStudio</a>
+    <footer class="footer">
+        <a class="logo" href="/">WebStudio</a>
         <address>
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            <a class="address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                 target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contact-footer-list">
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
