--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 
             <!--information_menu-->
-            <ul class="menu list">
-                <li><a class="link current" href="#studi">Студія</a></li>
+            <ul class="menu link">
+                <li><a class="link current" href="./index.html">Студія</a></li>
                 <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
                 <li><a class="link" href="#contacts">Контакти</a></li>
             </ul>
