--- a/portfolio.html
+++ b/portfolio.html
@@ -2,128 +2,130 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documen</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+	 <meta charset="UTF-8">
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <title>Documen</title>
+	 <link rel="stylesheet" href="./css/styles.css">
+	 <link
+		  href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+		  rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="page-header">
-        <nav>
+	 <header class="page-header">
+		  <nav>
 
-            <!--top_line-->
-            <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+				<!--top_line-->
+				<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 
-            <!--information_menu-->
-            <ul class="menu list">
-                <li><a class="link current" href="#studi">Студія</a></li>
-                <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="link" href="#contacts">Контакти</a></li>
-            </ul>
-        </nav>
+				<!--information_menu-->
+				<ul class="menu link">
+					 <li><a class="link" href="./index.html">Студія</a></li>
+					 <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+					 <li><a class="link" href="#contacts">Контакти</a></li>
+				</ul>
+		  </nav>
 
-        <!--contact-->
-        <ul class="contact list">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
-        </ul>
-    </header>
+		  <!--contact-->
+		  <ul class="contact list">
+				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
+		  </ul>
+	 </header>
 
-    <main>
-        <!--cap-->
-        <section class="cap">
-            <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="button-order" type="button">Замовити послугу</button>
-        </section>
+	 <main>
+		  <!--cap-->
+		  <section class="cap">
+				<h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
+				<button class="button-order" type="button">Замовити послугу</button>
+		  </section>
 
-        <!--features-->
-        <section class="section">
-            <h2 class="section-title">Features</h2>
-            <ul class="features list">
-                <li>
-                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="title-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="title-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3 class="title">ПЛАНУВАННЯ</h3>
-                    <p class="title-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="title-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-        </section>
+		  <!--features-->
+		  <section class="section">
+				<h2 class="section-title">Features</h2>
+				<ul class="features list">
+					 <li>
+						  <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+						  <p class="title-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+						  </p>
+					 </li>
+					 <li>
+						  <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+						  <p class="title-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+					 </li>
+					 <li>
+						  <h3 class="title">ПЛАНУВАННЯ</h3>
+						  <p class="title-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+					 </li>
+					 <li>
+						  <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+						  <p class="title-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+					 </li>
+				</ul>
+		  </section>
 
-        <!--what_we_do-->
-        <section class="section">
-            <h2 class="section-title">Чим ми займаємося</h2>
-            <ul class="work list">
-                <li>
-                    <img src="./imj/img0.png" alt="programming" width="370">
-                </li>
-                <li>
-                    <img src="./imj/img1.png" alt="mobile_applications" width="370">
-                </li>
-                <li>
-                    <img src="./imj/img2.png" alt="design" width="370">
-                </li>
-            </ul>
-        </section>
+		  <!--what_we_do-->
+		  <section class="section">
+				<h2 class="section-title">Чим ми займаємося</h2>
+				<ul class="work list">
+					 <li>
+						  <img src="./imj/img0.png" alt="programming" width="370">
+					 </li>
+					 <li>
+						  <img src="./imj/img1.png" alt="mobile_applications" width="370">
+					 </li>
+					 <li>
+						  <img src="./imj/img2.png" alt="design" width="370">
+					 </li>
+				</ul>
+		  </section>
 
-        <!--our_company-->
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="company list">
-                <li>
-                    <img src="./imj/img3.jpg" alt="product_designer" width="270">
-                    <h3 class="title">Ігор Дем'яненко</h3>
-                    <p class="title-text">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./imj/img4.jpg" alt="frontend_developer" width="270">
-                    <h3 class="title">Ольга Рєпіна</h3>
-                    <p class="title-text">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./imj/img5.jpg" alt="marketing" width="270">
-                    <h3 class="title">Микола Тарасов</h3>
-                    <p class="title-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./imj/img6.jpg" alt="ui_designer" width="270">
-                    <h3 class="title">Михайло Єрмаков</h3>
-                    <p class="title-text">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-
-    <!--dasement-->
-    <footer class="footer">
-        <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
-        <address>
-            <a class="address-link"
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
-            <ul class="contact-footer list">
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+		  <!--our_company-->
+		  <section class="section">
+				<h2 class="section-title">Наша команда</h2>
+				<ul class="company list">
+					 <li>
+						  <img src="./imj/img3.jpg" alt="product_designer" width="270">
+						  <h3 class="title">Ігор Дем'яненко</h3>
+						  <p class="title-text">Product Designer</p>
+					 </li>
+					 <li>
+						  <img src="./imj/img4.jpg" alt="frontend_developer" width="270">
+						  <h3 class="title">Ольга Рєпіна</h3>
+						  <p class="title-text">Frontend Developer</p>
+					 </li>
+					 <li>
+						  <img src="./imj/img5.jpg" alt="marketing" width="270">
+						  <h3 class="title">Микола Тарасов</h3>
+						  <p class="title-text">Marketing</p>
+					 </li>
+					 <li>
+						  <img src="./imj/img6.jpg" alt="ui_designer" width="270">
+						  <h3 class="title">Михайло Єрмаков</h3>
+						  <p class="title-text">UI Designer</p>
+					 </li>
+				</ul>   
+		  </section> 
+	 </main>
+	 
+	 <!--dasement-->
+	 <footer class="footer">
+		  <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+		  <address>
+				<a class="address-link"
+					 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+					 target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
+				<ul class="contact-footer list">
+					 <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					 <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+		  </address>
+	 </footer>
 
 </body>
 
 </html>
+    
+		 
