--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             <h2 class="section-title">Чим ми займаємося</h2>
             <ul class="work list">
                 <li>
-                    <img src="./imj/img0.png" alt="programming" width="370">
+                    <img src="./images/jpg0.png" alt="programming" width="370">
                 </li>
                 <li>
-                    <img src="./imj/img1.png" alt="mobile_applications" width="370">
+                    <img src="./images/jpg1.png" alt="mobile_applications" width="370">
                 </li>
                 <li>
-                    <img src="./imj/img2.png" alt="design" width="370">
+                    <img src="./images/jpg2.png" alt="design" width="370">
                 </li>
             </ul>
         </section>
@@ -85,22 +85,22 @@
             <h2 class="section-title">Наша команда</h2>
             <ul class="company list">
                 <li>
-                    <img src="./imj/img3.jpg" alt="product_designer" width="270">
+                    <img src="./images/jpg3.jpg" alt="product_designer" width="270">
                     <h3 class="title">Ігор Дем'яненко</h3>
                     <p class="title-text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./imj/img4.jpg" alt="frontend_developer" width="270">
+                    <img src="./images/jpg4.jpg" alt="frontend_developer" width="270">
                     <h3 class="title">Ольга Рєпіна</h3>
                     <p class="title-text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imj/img5.jpg" alt="marketing" width="270">
+                    <img src="./images/jpg5.jpg" alt="marketing" width="270">
                     <h3 class="title">Микола Тарасов</h3>
                     <p class="title-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./imj/img6.jpg" alt="ui_designer" width="270">
+                    <img src="./images/jpg6.jpg" alt="ui_designer" width="270">
                     <h3 class="title">Михайло Єрмаков</h3>
                     <p class="title-text">UI Designer</p>
                 </li>
