--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,69 @@
 				<li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
 		</ul>
 	</header>
-	
-    
+	<!--!portfolio_new-->
+	<main>
+		<h1>Наші роботи</h1>
+		<section class="section">
+			<h2>Портфоліо</h2>
+    <!--!button-->
+			<ul class="list">
+				<li><button class="button" type="button">Усі</button></li>
+				<li><button class="button" type="button">Веб-сайти</button></li>
+				<li><button class="button" type="button">Додатки</button></li>
+				<li><button class="button" type="button">Дизайн</button></li>
+				<li><button class="button" type="button">Маркетинг</button></li>
+			</ul>
+			<!--!portfolio-->
+			<ul class="portfolio list">
+				<li>
+					<img src="./images/jpg7.jpg" alt="Технокряк" width="370" />
+					<h3 class="title">Технокряк</h3>
+					<p class="title-text">Веб-сайт</p>
+				</li>
+				<li>
+					<img src="./images/jpg8.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+					<h3 class="title">Постер New Orlean vs Golden Star</h3>
+					<p class="title-text">Дизайн</p>
+				</li>
+				<li>
+					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370" />
+					<h3 class="title">Ресторан Seafood</h3>
+					<p class="title-text">Додаток</p>
+				</li>
+				<li>
+					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370" />
+					<h3 class="title">Проєкт Prime</h3>
+					<p class="title-text">Маркетинг</p>
+				</li>
+				<li>
+					<img src="./images/jpg11.jpg" alt="Проєкт Boxes" width="370" />
+					<h3 class="title">Проєкт Boxes</h3>
+					<p class="title-text">Додаток</p>
+				</li>
+				<li>
+					<img src="./images/jpg12.jpg" alt="Inspiration has no Borders" width="370" />
+					<h3 class="title">Inspiration has no Borders</h3>
+					<p class="title-text">Веб-сайт</p>
+				</li>
+				<li>
+					<img src="./images/jpg13.jpg" alt="Видання Limited Edition" width="370" />
+					<h3 class="title">Видання Limited Edition</h3>
+					<p class="title-text">Дизайн</p>
+				</li>
+				<li>
+					<img src="./images/jpg14.jpg" alt="Проєкт LAB" width="370" />
+					<h3 class="title">Проєкт LAB</h3>
+					<p class="title-text">Маркетинг</p>
+				</li>
+				<li>
+					<img src="./images/jpg15.jpg" alt="Growing Business" width="370" />
+					<h3 class="title">Growing Business</h3>
+					<p class="title-text">Додаток</p>
+				</li>
+			</ul>
+			</section>
+	</main>    
         <!--dasement-->
         <footer class="footer">
 	<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
