--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,16 @@
 	<body>
 	<header>
 		<nav>
-				<!--top_line-->
+	<!--!top_line-->
 				<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
-				<!--information_menu-->
-			<ul class="menu list">
-					<li><a class="link" href="./index.html">Студія</a></li>
-					<li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-					<li><a class="link" href="#contacts">Контакти</a></li>
+	<!--!information_menu-->
+		<ul class="menu list">
+				<li><a class="link" href="./index.html">Студія</a></li>
+				<li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+				<li><a class="link" href="#contacts">Контакти</a></li>
 		</ul>
 		</nav>
-		<!--contact-->
+	<!--!contact-->
 		<ul class="contact list">
 				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
@@ -31,7 +31,7 @@
 		<h1>Наші роботи</h1>
 		<section class="section">
 		<h2>Портфоліо</h2>
-            <!--!button-->
+    <!--!button-->
 			<ul class="list">
 				<li><button class="button" type="button">Усі</button></li>
 				<li><button class="button" type="button">Веб-сайти</button></li>
@@ -39,7 +39,7 @@
 				<li><button class="button" type="button">Дизайн</button></li>
 				<li><button class="button" type="button">Маркетинг</button></li>
 			</ul>
-			<!--!portfolio-->
+	<!--!portfolio-->
 			<ul class="portfolio list">
 				<li>
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370" />
@@ -89,7 +89,7 @@
 			</ul>
 		</section>
 	</main>    
-        <!--dasement-->
+    <!--!dasement-->
             <footer class="footer">
 	<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 		<address>
