class filter-btn

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
 		<h2>Портфоліо</h2>
     <!--!button-->
 			<ul class="list">
-				<li><button class="button" type="button">Усі</button></li>
-				<li><button class="button" type="button">Веб-сайти</button></li>
-				<li><button class="button" type="button">Додатки</button></li>
-				<li><button class="button" type="button">Дизайн</button></li>
-				<li><button class="button" type="button">Маркетинг</button></li>
+				<li><button class="filter-btn" type="button">Усі</button></li>
+				<li><button class="filter-btn" type="button">Веб-сайти</button></li>
+				<li><button class="filter-btn" type="button">Додатки</button></li>
+				<li><button class="filter-btn" type="button">Дизайн</button></li>
+				<li><button class="filter-btn" type="button">Маркетинг</button></li>
 			</ul>
 	<!--!portfolio-->
 			<ul class="portfolio list">
