--- a/portfolio.html
+++ b/portfolio.html
@@ -42,49 +42,67 @@
 	<!--!portfolio-->
 			<ul class="portfolio list">
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370">
 					<h2 class="title">Технокряк</h2>
 					<p class="title-text">Веб-сайт</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg8.jpg" alt="Постер New Orlean vs Golden Star" width="370">
 					<h2 class="title">Постер New Orlean vs Golden Star</h2>
 					<p class="title-text">Дизайн</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370">
 					<h2 class="title">Ресторан Seafood</h2>
 					<p class="title-text">Додаток</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370">
 					<h2 class="title">Проєкт Prime</h2>
 					<p class="title-text">Маркетинг</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg11.jpg" alt="Проєкт Boxes" width="370">
 					<h2 class="title">Проєкт Boxes</h2>
 					<p class="title-text">Додаток</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg12.jpg" alt="Inspiration has no Borders" width="370">
 					<h2 class="title">Inspiration has no Borders</h2>
 					<p class="title-text">Веб-сайт</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg13.jpg" alt="Видання Limited Edition" width="370">
 					<h2 class="title">Видання Limited Edition</h2>
 					<p class="title-text">Дизайн</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg14.jpg" alt="Проєкт LAB" width="370">
 					<h2 class="title">Проєкт LAB</h2>
 					<p class="title-text">Маркетинг</p>
+					</a>
 				</li>
 				<li>
+					<a href="#" target="_blank" rel="noopener noreferrer">
 					<img src="./images/jpg15.jpg" alt="Growing Business" width="370">
 					<h2 class="title">Growing Business</h2>
 					<p class="title-text">Додаток</p>
+					</a>
 				</li>
 			</ul>
 		</section>
